# network-security

./: README.md  requirements.txt
Authentication_ZAP_GT_CRIVO/: Makefile  README.md  copy.sh  docker-compose.yml  make-env.sh
LLM_classification/: INFO_SPEED.md  LLM.py  README.md  constants.py  create_problems.py  distributed_classification.py  metasploit.py  nmap.py  nuclei.py  openvas.py  requirements.txt  utils.py  verify_code_similarity.py
LLM_classification_and_grouping/: README.md  create_problems.py  distributed_classification.py  requirements.txt  verify_code_similarity.py
analysisDataset/: .gitignore  README.md  analysis_shodan_censys.sh  analysis_shodan_censys_data.py  filter_ufmg_censys.py  filter_ufmg_shodan.py  format_censys_data.sh  load_censys_in_shodan_format.py  load_data_and_make_analysis.sh  probe_censys.py  probe_data_shodan_and_censys.py  probe_shodan.py  temporal_scan_ip_shodan.py  timeseries.py
censys/: README.md  download.py
dns-anon-keywords/: 0-word_map.cpp  3-llm_prompt.py  5-final_words.py
dns-extraction/: 1-dns_words.py  2-knee_words.py  3-classified_words.py  3-llm_prompt.py  4-classified_words.py  4-final_words.py  5-final_words.py  README.md  dns-keywords.txt  prompt.txt  rdns_example.json  run.sh
dns/unbound-parsing/: Cargo.toml  README.md
dns/unbound-parsing/refs/: prompts.md
dns/unbound-parsing/scripts/: plot_timeseries.py  plot_zipf.py  pyproject.toml
dns/unbound-parsing/src/: main.rs
dojo/: Iago.md  LEO.md
info-llm-speed-lab/: README.md
openvas-filter-findings/: config.json  filter.py
shodan/: README.md  shodan_docker.py
urls_filter/: filter.py  get-tld-json.py  pyproject.toml  test_filter.py
urls_filter/data/: tlds.json
voting_analysis/: .gitignore  .pdm-python  README.md  pyproject.toml
voting_analysis/src/analysis/: data_prep.ipynb  email_generator.py
voting_analysis/src/analysis/templates/: empty_report.html  report.html
voting_analysis/src/email/: email_generator.py
voting_analysis/src/email/templates/: report.html
(+99 files in other folders)
