[project]
name = "urls-filter"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "beautifulsoup4==4.14.3",
    "bs4==0.0.2",
    "certifi==2026.1.4",
    "charset-normalizer==3.4.4",
    "exceptiongroup==1.3.1",
    "idna==3.11",
    "iniconfig==2.1.0",
    "packaging==26.0",
    "pluggy==1.6.0",
    "pygments==2.19.2",
    "pytest==8.4.2",
    "requests==2.32.5",
    "soupsieve==2.8.3",
    "tomli==2.4.0",
    "typing-extensions==4.15.0",
    "urllib3==2.6.3",
]
