[project]
name = "crivo"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "Bernnardo Seraphim", email = "bernnardosbo@gmail.com"},
]
dependencies = ["pandas>=2.0.3", "matplotlib>=3.7.5", "numpy>=1.24.4", "black>=24.8.0", "pre-commit>=3.5.0"]
requires-python = "==3.8.*"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false
