[package]
name = "unbound-parsing"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
chrono = "0.4"
csv = "1.3"
flate2 = "1.0"
glob = "0.3"
indicatif = "0.17" # For progress bar, nice to have
itertools = "0.13"
regex = "1.10"
serde = { version = "1.0", features = ["derive"] }
clap = { version = "4.5", features = ["derive"] }
log = "0.4"
env_logger = "0.11"